[gd_scene load_steps=6 format=3 uid="uid://bh3k8wqyayn2l"]

[ext_resource type="Script" path="res://game/ui/CharacterPanel.gd" id="1_8k2x4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_main"]
bg_color = Color(0.08, 0.08, 0.12, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.5, 0.3, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_header"]
bg_color = Color(0.15, 0.1, 0.05, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.6, 0.5, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_stats"]
bg_color = Color(0.05, 0.05, 0.08, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.3, 0.2, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_slot"]
bg_color = Color(0.1, 0.1, 0.15, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.4, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="CharacterPanel" type="PanelContainer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -350.0
offset_right = 620.0
offset_bottom = 350.0
mouse_filter = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_main")
script = ExtResource("1_8k2x4")

[node name="MainVBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HeaderBar" type="PanelContainer" parent="MainVBox"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_header")

[node name="HeaderHBox" type="HBoxContainer" parent="MainVBox/HeaderBar"]
layout_mode = 2

[node name="CharacterName" type="Label" parent="MainVBox/HeaderBar/HeaderHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.95, 0.85, 0.6, 1)
theme_override_font_sizes/font_size = 20
text = "Nom du Personnage"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="MainVBox/HeaderBar/HeaderHBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.9, 0.4, 1)
theme_override_font_sizes/font_size = 16
text = "Niveau 1"

[node name="CloseButton" type="Button" parent="MainVBox/HeaderBar/HeaderHBox"]
layout_mode = 2
size_flags_horizontal = 8
text = "‚úï"
flat = true

[node name="ContentHBox" type="HBoxContainer" parent="MainVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPanel" type="VBoxContainer" parent="MainVBox/ContentHBox"]
layout_mode = 2
size_flags_horizontal = 0
custom_minimum_size = Vector2(220, 0)

[node name="CharacterStats" type="PanelContainer" parent="MainVBox/ContentHBox/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_stats")

[node name="StatsVBox" type="VBoxContainer" parent="MainVBox/ContentHBox/LeftPanel/CharacterStats"]
layout_mode = 2

[node name="StatsTitle" type="Label" parent="MainVBox/ContentHBox/LeftPanel/CharacterStats/StatsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.6, 1)
theme_override_font_sizes/font_size = 16
text = "üìä Caract√©ristiques"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainVBox/ContentHBox/LeftPanel/CharacterStats/StatsVBox"]
layout_mode = 2

[node name="StatsGrid" type="GridContainer" parent="MainVBox/ContentHBox/LeftPanel/CharacterStats/StatsVBox"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="VitalityLabel" type="Label" parent="MainVBox/ContentHBox/LeftPanel/CharacterStats/StatsVBox/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.3, 0.3, 1)
text = "‚ù§Ô∏è Vitalit√©:"

[node name="VitalityValue" type="Label" parent="MainVBox/ContentHBox/LeftPanel/CharacterStats/StatsVBox/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "100"
horizontal_alignment = 2

[node name="WisdomLabel" type="Label" parent="MainVBox/ContentHBox/LeftPanel/CharacterStats/StatsVBox/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.7, 0.9, 1)
text = "üß† Sagesse:"

[node name="WisdomValue" type="Label" parent="MainVBox/ContentHBox/LeftPanel/CharacterStats/StatsVBox/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "50"
horizontal_alignment = 2

[node name="StrengthLabel" type="Label" parent="MainVBox/ContentHBox/LeftPanel/CharacterStats/StatsVBox/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.6, 0.3, 1)
text = "üí™ Force:"

[node name="StrengthValue" type="Label" parent="MainVBox/ContentHBox/LeftPanel/CharacterStats/StatsVBox/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "25"
horizontal_alignment = 2

[node name="IntelligenceLabel" type="Label" parent="MainVBox/ContentHBox/LeftPanel/CharacterStats/StatsVBox/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.3, 0.9, 1)
text = "üéØ Intelligence:"

[node name="IntelligenceValue" type="Label" parent="MainVBox/ContentHBox/LeftPanel/CharacterStats/StatsVBox/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "30"
horizontal_alignment = 2

[node name="ChanceLabel" type="Label" parent="MainVBox/ContentHBox/LeftPanel/CharacterStats/StatsVBox/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.9, 0.3, 1)
text = "üçÄ Chance:"

[node name="ChanceValue" type="Label" parent="MainVBox/ContentHBox/LeftPanel/CharacterStats/StatsVBox/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "20"
horizontal_alignment = 2

[node name="AgilityLabel" type="Label" parent="MainVBox/ContentHBox/LeftPanel/CharacterStats/StatsVBox/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.3, 1)
text = "‚ö° Agilit√©:"

[node name="AgilityValue" type="Label" parent="MainVBox/ContentHBox/LeftPanel/CharacterStats/StatsVBox/StatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "35"
horizontal_alignment = 2

[node name="HSeparator2" type="HSeparator" parent="MainVBox/ContentHBox/LeftPanel/CharacterStats/StatsVBox"]
layout_mode = 2

[node name="SecondaryStatsGrid" type="GridContainer" parent="MainVBox/ContentHBox/LeftPanel/CharacterStats/StatsVBox"]
layout_mode = 2
columns = 2

[node name="HPLabel" type="Label" parent="MainVBox/ContentHBox/LeftPanel/CharacterStats/StatsVBox/SecondaryStatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "PV:"

[node name="HPValue" type="Label" parent="MainVBox/ContentHBox/LeftPanel/CharacterStats/StatsVBox/SecondaryStatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 12
text = "150/150"
horizontal_alignment = 2

[node name="APLabel" type="Label" parent="MainVBox/ContentHBox/LeftPanel/CharacterStats/StatsVBox/SecondaryStatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "PA:"

[node name="APValue" type="Label" parent="MainVBox/ContentHBox/LeftPanel/CharacterStats/StatsVBox/SecondaryStatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.6, 0.9, 1)
theme_override_font_sizes/font_size = 12
text = "6/6"
horizontal_alignment = 2

[node name="MPLabel" type="Label" parent="MainVBox/ContentHBox/LeftPanel/CharacterStats/StatsVBox/SecondaryStatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "PM:"

[node name="MPValue" type="Label" parent="MainVBox/ContentHBox/LeftPanel/CharacterStats/StatsVBox/SecondaryStatsGrid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.9, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "3/3"
horizontal_alignment = 2

[node name="MiddlePanel" type="VBoxContainer" parent="MainVBox/ContentHBox"]
layout_mode = 2
size_flags_horizontal = 0
custom_minimum_size = Vector2(180, 0)

[node name="EquipmentTitle" type="Label" parent="MainVBox/ContentHBox/MiddlePanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.6, 1)
theme_override_font_sizes/font_size = 16
text = "‚öîÔ∏è √âquipement"
horizontal_alignment = 1

[node name="EquipmentArea" type="GridContainer" parent="MainVBox/ContentHBox/MiddlePanel"]
layout_mode = 2
size_flags_vertical = 3
columns = 3

[node name="HSeparator3" type="Control" parent="MainVBox/ContentHBox/MiddlePanel/EquipmentArea"]
layout_mode = 2

[node name="HEADSlot" type="Panel" parent="MainVBox/ContentHBox/MiddlePanel/EquipmentArea"]
custom_minimum_size = Vector2(52, 52)
layout_mode = 2
tooltip_text = "Casque"
theme_override_styles/panel = SubResource("StyleBoxFlat_slot")

[node name="HEADIcon" type="TextureRect" parent="MainVBox/ContentHBox/MiddlePanel/EquipmentArea/HEADSlot"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
stretch_mode = 5

[node name="HSeparator4" type="Control" parent="MainVBox/ContentHBox/MiddlePanel/EquipmentArea"]
layout_mode = 2

[node name="AMULETSlot" type="Panel" parent="MainVBox/ContentHBox/MiddlePanel/EquipmentArea"]
custom_minimum_size = Vector2(52, 52)
layout_mode = 2
tooltip_text = "Amulette"
theme_override_styles/panel = SubResource("StyleBoxFlat_slot")

[node name="AMULETIcon" type="TextureRect" parent="MainVBox/ContentHBox/MiddlePanel/EquipmentArea/AMULETSlot"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
stretch_mode = 5

[node name="WEAPONSlot" type="Panel" parent="MainVBox/ContentHBox/MiddlePanel/EquipmentArea"]
custom_minimum_size = Vector2(52, 52)
layout_mode = 2
tooltip_text = "Arme"
theme_override_styles/panel = SubResource("StyleBoxFlat_slot")

[node name="WEAPONIcon" type="TextureRect" parent="MainVBox/ContentHBox/MiddlePanel/EquipmentArea/WEAPONSlot"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
stretch_mode = 5

[node name="RINGSlot" type="Panel" parent="MainVBox/ContentHBox/MiddlePanel/EquipmentArea"]
custom_minimum_size = Vector2(52, 52)
layout_mode = 2
tooltip_text = "Anneau"
theme_override_styles/panel = SubResource("StyleBoxFlat_slot")

[node name="RINGIcon" type="TextureRect" parent="MainVBox/ContentHBox/MiddlePanel/EquipmentArea/RINGSlot"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
stretch_mode = 5

[node name="CHESTSlot" type="Panel" parent="MainVBox/ContentHBox/MiddlePanel/EquipmentArea"]
custom_minimum_size = Vector2(52, 52)
layout_mode = 2
tooltip_text = "Plastron"
theme_override_styles/panel = SubResource("StyleBoxFlat_slot")

[node name="CHESTIcon" type="TextureRect" parent="MainVBox/ContentHBox/MiddlePanel/EquipmentArea/CHESTSlot"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
stretch_mode = 5

[node name="BELTSlot" type="Panel" parent="MainVBox/ContentHBox/MiddlePanel/EquipmentArea"]
custom_minimum_size = Vector2(52, 52)
layout_mode = 2
tooltip_text = "Ceinture"
theme_override_styles/panel = SubResource("StyleBoxFlat_slot")

[node name="BELTIcon" type="TextureRect" parent="MainVBox/ContentHBox/MiddlePanel/EquipmentArea/BELTSlot"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
stretch_mode = 5

[node name="PETSlot" type="Panel" parent="MainVBox/ContentHBox/MiddlePanel/EquipmentArea"]
custom_minimum_size = Vector2(52, 52)
layout_mode = 2
tooltip_text = "Familier"
theme_override_styles/panel = SubResource("StyleBoxFlat_slot")

[node name="PETIcon" type="TextureRect" parent="MainVBox/ContentHBox/MiddlePanel/EquipmentArea/PETSlot"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
stretch_mode = 5

[node name="BOOTSSlot" type="Panel" parent="MainVBox/ContentHBox/MiddlePanel/EquipmentArea"]
custom_minimum_size = Vector2(52, 52)
layout_mode = 2
tooltip_text = "Bottes"
theme_override_styles/panel = SubResource("StyleBoxFlat_slot")

[node name="BOOTSIcon" type="TextureRect" parent="MainVBox/ContentHBox/MiddlePanel/EquipmentArea/BOOTSSlot"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
stretch_mode = 5

[node name="MOUNTSlot" type="Panel" parent="MainVBox/ContentHBox/MiddlePanel/EquipmentArea"]
custom_minimum_size = Vector2(52, 52)
layout_mode = 2
tooltip_text = "Monture"
theme_override_styles/panel = SubResource("StyleBoxFlat_slot")

[node name="MOUNTIcon" type="TextureRect" parent="MainVBox/ContentHBox/MiddlePanel/EquipmentArea/MOUNTSlot"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
stretch_mode = 5

[node name="RightPanel" type="VBoxContainer" parent="MainVBox/ContentHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InventoryTitle" type="Label" parent="MainVBox/ContentHBox/RightPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.6, 1)
theme_override_font_sizes/font_size = 16
text = "üì¶ Inventaire"
horizontal_alignment = 1

[node name="InventoryScroll" type="ScrollContainer" parent="MainVBox/ContentHBox/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="InventoryGrid" type="GridContainer" parent="MainVBox/ContentHBox/RightPanel/InventoryScroll"]
layout_mode = 2
size_flags_horizontal = 3
columns = 6

[node name="LoadingLabel" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -12.0
offset_right = 50.0
offset_bottom = 11.0
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Chargement..."
horizontal_alignment = 1

[node name="ItemTooltip" type="PanelContainer" parent="."]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -200.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_stats")

[node name="TooltipLabel" type="RichTextLabel" parent="ItemTooltip"]
layout_mode = 2
custom_minimum_size = Vector2(220, 0)
theme_override_colors/default_color = Color(0.9, 0.8, 0.6, 1)
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[b][color=white]Nom de l'objet[/color][/b]
[color=gray]Niveau requis: 10[/color]
[i]Description de l'objet...[/i]

[color=yellow]Effets:[/color]
[color=orange]+5 Force[/color]
[color=green]+3 Agilit√©[/color]"
fit_content = true